알람소리 추가

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <h1>라면 타이머 뭐지?  </h1>
+    <h1>라면 타이머</h1>
     <!-- 시계-입력 -->
     <p>
         <select id="select_minute">
