십분단위 시간 일분단위 시간 분리 입력

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <h1>라면 타이머</h1>
     <!-- 시계-입력 -->
     <p>
-        <select id="select_minute">
+        <select id="select_minute_10">
+            <option value="0" selected>0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+        </select>
+        <select id="select_minute_1">
             <option value="0">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
